--- a/.github/workflows/toolforge-deploy.yml
+++ b/.github/workflows/toolforge-deploy.yml
@@ -21,7 +21,7 @@ jobs:
           mkdir -p ~/.ssh/
           echo "$SSH_KEY" > ~/.ssh/toolforge.key
           chmod 600 ~/.ssh/toolforge.key
-          cat >>~/.ssh/config <<END
+          cat >> ~/.ssh/config <<END
           Host toolforge
             HostName $SSH_HOST
             User $SSH_USER
@@ -41,7 +41,7 @@ jobs:
             [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion";
             nvm use default;
             cd /data/project/mdanielsbot/mwn;
-            if [[ "$(git pull --ff-only | grep -c "Already up to date")" -eq 0 ]]; then
+            if [[ "$(git pull --ff-only | grep -c \"Already up to date\")" -eq 0 ]]; then
               if [[ "$(git diff --name-only HEAD HEAD@{1} | grep -c package.json)" -gt 0 ]]; then
                 echo "Running npm install for mwn ...";
                 npm install;
